--- a/wp-content/themes/TheFurnitureStoreLight/style.css
+++ b/wp-content/themes/TheFurnitureStoreLight/style.css
@@ -511,6 +511,10 @@ FLOATSWRAP
 	padding: 0 0 0 40px;
 	border:0px;
 }
+.page_post img {
+	padding:1px;
+	background: #D9F3FF;
+}
 /**  BLOG  **/
 /*on category pages*/
 .blog_post .date, .archive_post .date, .blogTag_post .date {
